--- a/src/main/resources/application/fxml/Register.fxml
+++ b/src/main/resources/application/fxml/Register.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:controller="application.controller.RegisterController" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox fx:id="header" alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="600.0" styleClass="header">
          <children>
@@ -25,18 +31,18 @@
             <HBox prefHeight="30.0" prefWidth="282.0">
                <children>
                   <Label prefWidth="90.0" text="res Name:" />
-                  <TextField prefWidth="140.0" promptText="BP" />
+                  <TextField fx:id="TF_restName" prefWidth="140.0" promptText="BP" />
                </children>
             </HBox>
             <HBox prefHeight="26.0" prefWidth="282.0">
                <children>
                   <Label prefWidth="90.0" text="password" />
-                  <TextField prefWidth="140.0" promptText="*****" />
+                  <TextField fx:id="TF_password" prefWidth="140.0" promptText="*****" />
                </children>
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="215.0">
                <children>
-                  <SplitMenuButton alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" popupSide="RIGHT" prefHeight="25.0" prefWidth="132.0" text="tags">
+                  <SplitMenuButton fx:id="SMBtn_tags" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" popupSide="RIGHT" prefHeight="25.0" prefWidth="132.0" text="tags">
                      <items>
                         <CheckMenuItem mnemonicParsing="false" text="Kosher" />
                         <CheckMenuItem mnemonicParsing="false" text="Thiland" />
@@ -49,30 +55,30 @@
             <HBox prefHeight="33.0" prefWidth="215.0">
                <children>
                   <Label prefWidth="90.0" text="Owner Name:" />
-                  <TextField prefHeight="23.0" prefWidth="140.0" promptText="name" />
+                  <TextField fx:id="TF_ownerName" prefHeight="23.0" prefWidth="140.0" promptText="name" />
                </children>
             </HBox>
             <HBox prefHeight="25.0" prefWidth="200.0">
                <children>
-                  <Label prefWidth="90.0" text="Adress:" />
-                  <TextField prefHeight="23.0" prefWidth="140.0" promptText="name" />
+                  <Label prefWidth="90.0" text="Address:" />
+                  <TextField fx:id="TF_address" prefHeight="23.0" prefWidth="140.0" promptText="name" />
                </children>
             </HBox>
             <HBox prefHeight="35.0" prefWidth="215.0">
                <children>
                   <Label prefWidth="90.0" text="Phone number:" />
-                  <TextField prefHeight="23.0" prefWidth="140.0" promptText="name" />
+                  <TextField fx:id="TF_phone" prefHeight="23.0" prefWidth="140.0" promptText="name" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="48.0" prefWidth="215.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="161.0" text="Choose Location">
+                  <Button fx:id="btn_location" mnemonicParsing="false" onAction="#btn_clicked" prefHeight="32.0" prefWidth="161.0" text="Choose Location">
                      <font>
                         <Font size="1.0" />
                      </font></Button>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" text="Register" />
+            <Button fx:id="btn_register" mnemonicParsing="false" onAction="#btn_clicked" text="Register" />
          </children>
       </VBox>
    </children>
