--- a/src/main/resources/application/fxml/chooseLocation.fxml
+++ b/src/main/resources/application/fxml/chooseLocation.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import gui.controller.*?>
+<?import application.controller.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
