--- a/src/main/java/depcrated/waiterMenu.fxml
+++ b/src/main/java/depcrated/waiterMenu.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@../../resources/application/fxml/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TabPane layoutY="63.0" prefHeight="501.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -52,7 +52,7 @@
                           <children>
                              <ImageView fitHeight="73.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true" styleClass="avaible">
                                 <image>
-                                   <Image url="@../photos/bar.png" />
+                                   <Image url="@../../resources/application/photos/bar.png" />
                                 </image>
                              </ImageView>
                              <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="58.0" prefWidth="69.0" styleClass="avaible" text="2/5" textFill="#027bf4">
