--- a/src/main/resources/application/fxml/tabMenu.fxml
+++ b/src/main/resources/application/fxml/tabMenu.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane fx:controller="application.controller.TabMenuController" prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.TabMenuController">
     <children>
         <TabPane fx:id="tabPane" layoutY="63.0" prefHeight="501.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
@@ -276,7 +274,7 @@
                                     </children></VBox>
                             </right>
                             <center>
-                                <GridPane alignment="CENTER" style="-fx-background-color: white; -fx-border-color: black; -fx-grid-lines-visible: true;" BorderPane.alignment="CENTER">
+                                <GridPane fx:id="modelTable" alignment="CENTER" style="-fx-background-color: white; -fx-border-color: black; -fx-grid-lines-visible: true;" BorderPane.alignment="CENTER">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -295,75 +293,6 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
-                                    <children>
-                                        <ImageView fitHeight="73.0" fitWidth="74.0" pickOnBounds="true" preserveRatio="true" styleClass="avaible">
-                                            <image>
-                                                <Image url="@../photos/bar.png" />
-                                            </image>
-                                        </ImageView>
-                                        <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="58.0" prefWidth="69.0" styleClass="avaible" text="2/5" textFill="#027bf4">
-                                            <font>
-                                                <Font name="System Bold" size="37.0" />
-                                            </font>
-                                        </Label>
-                                        <AnchorPane layoutX="300.0" layoutY="271.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4">
-                                            <children>
-                                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="41.0" layoutY="7.0" prefHeight="38.0" prefWidth="35.0" styleClass="chair" text="5" textAlignment="CENTER" textFill="#027bf4">
-                                                    <font>
-                                                        <Font name="System Bold" size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label alignment="CENTER" layoutX="6.0" layoutY="40.0" prefHeight="46.0" prefWidth="59.0" text="#3">
-                                                    <styleClass>
-                                                        <String fx:value="table" />
-                                                        <String fx:value="full" />
-                                                    </styleClass>
-                                                    <font>
-                                                        <Font size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label layoutY="6.0" prefHeight="38.0" prefWidth="35.0" styleClass="smokingZone" />
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane layoutX="300.0" layoutY="2.0" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
-                                            <children>
-                                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="41.0" layoutY="7.0" prefHeight="38.0" prefWidth="35.0" styleClass="chair" text="5" textAlignment="CENTER" textFill="#027bf4">
-                                                    <font>
-                                                        <Font name="System Bold" size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label alignment="CENTER" layoutX="6.0" layoutY="40.0" prefHeight="46.0" prefWidth="59.0" text="#1">
-                                                    <styleClass>
-                                                        <String fx:value="table" />
-                                                        <String fx:value="avaible" />
-                                                    </styleClass>
-                                                    <font>
-                                                        <Font size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label layoutY="6.0" prefHeight="38.0" prefWidth="35.0" styleClass="smokingZone" />
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane layoutX="11.0" layoutY="2.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
-                                            <children>
-                                                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="41.0" layoutY="7.0" prefHeight="38.0" prefWidth="35.0" styleClass="chair" text="5" textAlignment="CENTER" textFill="#027bf4">
-                                                    <font>
-                                                        <Font name="System Bold" size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label alignment="CENTER" layoutX="6.0" layoutY="40.0" prefHeight="46.0" prefWidth="59.0" text="#2">
-                                                    <styleClass>
-                                                        <String fx:value="table" />
-                                                        <String fx:value="avaible" />
-                                                    </styleClass>
-                                                    <font>
-                                                        <Font size="24.0" />
-                                                    </font>
-                                                </Label>
-                                                <Label layoutY="6.0" prefHeight="38.0" prefWidth="35.0" styleClass="smokingZone" />
-                                            </children>
-                                        </AnchorPane>
-                                    </children>
                                 </GridPane>
                             </center>
                         </BorderPane>
