--- a/src/main/resources/application/fxml/Login.fxml
+++ b/src/main/resources/application/fxml/Login.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
+<Pane prefHeight="400.0" prefWidth="600.0" styleClass="root" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.LoginController">
    <children>
       <HBox fx:id="header" alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="600.0" styleClass="header">
          <children>
@@ -30,19 +25,19 @@
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="193.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="60.0" text="ID:" />
-                  <TextField fx:id="TF_id" />
+                  <TextField fx:id="TF_id" styleClass="id" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="50.0" prefWidth="193.0">
                <children>
                   <Label prefHeight="17.0" prefWidth="60.0" text="Name:" />
-                  <TextField fx:id="TF_name" />
+                  <TextField fx:id="TF_name" styleClass="name" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="193.0">
                <children>
                   <Label prefWidth="60.0" text="Password:" />
-                  <PasswordField fx:id="TF_password" />
+                  <PasswordField fx:id="TF_password" styleClass="password" />
                </children>
             </HBox>
             <Button fx:id="btn_login" mnemonicParsing="false" onAction="#btnClicked" text="Login" />
