--- a/src/main/resources/application/fxml/tablesStyle.css
+++ b/src/main/resources/application/fxml/tablesStyle.css
@@ -8,7 +8,7 @@
         url("../photos/table.png");
 }
 .chair{
--fx-alignment: left;
+-fx-alignment: center;
 -fx-background-repeat: no-repeat;
  -fx-background-position: right;
  -fx-background-size: contain;
