fix a lot of tests and arrange.

--- a/src/main/resources/application/fxml/cell.fxml
+++ b/src/main/resources/application/fxml/cell.fxml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
 <fx:root stylesheets="@tablesStyle.css" type="VBox" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="smoke" prefHeight="8.0" prefWidth="177.0" styleClass="smoke_zone" text="Label" />
-      <Label fx:id="seats" prefHeight="47.0" prefWidth="162.0" text="seats: &#10; 100" textAlignment="CENTER" wrapText="true">
-         <styleClass>
-            <String fx:value="chair" />
-            <String fx:value="green" />
-         </styleClass></Label>
-      <Label fx:id="table" prefHeight="37.0" prefWidth="178.0" text="Label">
-         <styleClass>
-            <String fx:value="table" />
-            <String fx:value="red" />
-         </styleClass></Label>
+      <Label fx:id="seats" prefHeight="47.0" prefWidth="162.0" styleClass="chair" text="seats: &#10; 100" textAlignment="CENTER" wrapText="true" />
+      <Label fx:id="table" prefHeight="37.0" prefWidth="178.0" styleClass="table" text="Label" />
    </children>
 </fx:root>
